<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">
  <include layout="@layout/progress_bar_bg"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_below="@+id/ly"/>

  <ScrollView
          android:layout_below="@+id/progressbar"
          android:id="@+id/scrollView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fillViewport="true">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


      <LinearLayout

              android:layout_marginRight="20dp"
              android:layout_marginBottom="20dp"
              android:layout_marginLeft="20dp"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:orientation="vertical">

          <TextView
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/fname" />

          <EditText
                  android:id="@+id/fname"
                  style="@style/CustomEditText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:tag="@string/fname"
                  android:maxLength="@integer/text_alphabet"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_fname"
                  android:imeOptions="actionNext"
                  android:inputType="textEmailAddress" />


          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/mname" />

          <EditText
                  android:id="@+id/mname"
                  style="@style/CustomEditText"
                  android:maxLength="@integer/text_alphabet"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:tag="@string/mname"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_mname"
                  android:imeOptions="actionNext"
                  android:inputType="textEmailAddress" />


          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/lname" />

          <EditText
                  android:id="@+id/lname"
                  style="@style/CustomEditText"
                  android:maxLength="@integer/text_alphabet"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:tag="@string/lname"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_lname"
                  android:imeOptions="actionNext"
                  android:inputType="textEmailAddress" />
          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/pno" />


          <EditText
                  android:id="@+id/pno"
                  style="@style/CustomEditText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:tag="@string/pno"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_pno"
                  android:imeOptions="actionNext"
                  android:maxLength="@integer/phone_text"
                  android:digits="+0123456789"
                  android:inputType="phone" />
          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/txt_email_add" />

          <EditText
                  android:id="@+id/txt_email_add"
                  style="@style/CustomEditText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:tag="@string/txt_email_add"
                  android:maxLength="@integer/text_alphabet"
                  android:focusable="false"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_email"
                  android:imeOptions="actionDone"
                  android:inputType="textEmailAddress" />

          <TextView
                  android:textSize="@dimen/btn_size"
                  style="@style/CustomTextView"
                  android:visibility="gone"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="left"
                  android:focusableInTouchMode="true"
                  android:text="Upload Profile picture"
                  android:hint="@string/tips" />
          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/profile_pic" />

          <RelativeLayout android:layout_width="fill_parent"
                          android:layout_marginTop="10dp"
                          android:layout_height="wrap_content">
            <RelativeLayout
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/default_profile_picture"
            >
              <ImageView
                      android:layout_gravity="center_horizontal"
                      android:layout_width="150dp"
                      android:layout_height="150dp"
                      android:layout_centerInParent="true"
                      android:src="@drawable/profile_picture_frame"
              />

            </RelativeLayout>

            <Button
                    android:layout_width="40dp"
                    android:layout_toRightOf="@+id/logo"
                    style="@style/CustomClickableButton"
                    android:id="@+id/add"
                    android:layout_marginLeft="-20dp"
                    android:onClick="select"
                    android:background="@drawable/upload_picture" />
          </RelativeLayout>
          <Button
                  android:layout_marginTop="20dp"
                  android:layout_width="fill_parent"
                  style="@style/CustomClickableButton"
                  android:id="@+id/action_login"
                  android:onClick="login"
                  android:textAllCaps="false"
                  android:text="@string/edit" />

        </LinearLayout>
      </LinearLayout>
    </RelativeLayout>
  </ScrollView>
</LinearLayout>