<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background">
              <include layout="@layout/progress_bar_bg"
              />

  <ProgressBar
          android:id="@+id/progressbar"
          style="?android:attr/progressBarStyleHorizontal"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:indeterminate="true"
          android:max="100"
          android:visibility="invisible"
          android:backgroundTint="@color/white"
          android:indeterminateTint="@color/colorPrimary"
          android:layout_marginTop="7dp"/>
  <ScrollView
          android:id="@+id/scrollView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fillViewport="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

      <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginRight="20dp"
              android:layout_marginBottom="20dp"
              android:layout_marginLeft="20dp"
              android:orientation="vertical">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:orientation="vertical">

          <TextView
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/h_name"

          />

          <EditText
                  android:id="@+id/h_name"
                  style="@style/CustomEditText"
                  android:maxLength="@integer/text_alphabet"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/pading"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_h_name"
                  android:imeOptions="actionNext" />

          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/a_number"
          />

          <EditText
                  android:id="@+id/a_number"
                  android:maxLength="16"
                  style="@style/CustomEditText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:layout_margin="@dimen/pading"
                  android:hint="@string/hint_a_number"
                  android:imeOptions="actionNext" />
          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/b_name"
          />

          <EditText
                  android:id="@+id/b_name"
                  android:maxLength="@integer/text_bnk_name"
                  style="@style/CustomEditText"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/pading"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_b_name"
                  android:imeOptions="actionNext" />


          <TextView
                  android:layout_marginTop="10dp"
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/i_code" />

          <EditText
                  android:id="@+id/i_code"
                  style="@style/CustomEditText"
                  android:maxLength="11"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="@dimen/pading"
                  android:focusableInTouchMode="true"
                  android:hint="@string/hint_i_code"
                  android:imeOptions="actionDone"
                  android:inputType="textPassword" />
          <Button
                  android:layout_marginTop="30dp"
                  android:id="@+id/p_registor"
                  style="@style/CustomClickableButton"
                  android:layout_alignParentBottom="true"
                  android:layout_width="fill_parent"
                  android:textAllCaps="false"
                  android:text="@string/save" />
        </LinearLayout>
      </LinearLayout>


    </RelativeLayout>
  </ScrollView>

</LinearLayout>