<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/zd_rounded_without_strock"
             android:padding="20dp"
>
<ImageView android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:src="@drawable/dollar_sign"
           android:id="@+id/p_icon"
           android:layout_gravity="center_horizontal"
/>

    <TextView
            android:layout_width="wrap_content"
            android:text="Alert!"
            android:visibility="gone"
            android:id="@+id/_txt"
            android:layout_height="wrap_content"
            style="@style/CustomBoldTextView"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
    />

    <TextView android:layout_width="fill_parent"
              android:id="@+id/titl_txt"
              android:layout_height="wrap_content"
              style="@style/CustomBoldTextView"
               android:src="@drawable/zd_time"
               android:padding="10dp"
               android:text="@string/amt"
               android:gravity="center_horizontal"
               android:layout_gravity="center_horizontal"
    />
    <EditText
            android:id="@+id/amt"
            style="@style/CustomEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_amt"
            android:digits="0123456789"
            android:imeOptions="actionDone"
            android:inputType="phone" />

<LinearLayout android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="horizontal"
              android:weightSum="1"
              android:id="@+id/doubleframe"
              android:layout_marginTop="20dp"
>
    <TextView
            android:id="@+id/cancel"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:clickable="true"
            style="@style/CustomPopupButton"
            android:layout_height="wrap_content"
            android:background="@color/cancel"
            android:text="@string/cancel" />
    <TextView
            android:id="@+id/save"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:layout_width="wrap_content"
            style="@style/CustomPopupButton"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/black"
            android:text="@string/save" />
</LinearLayout>

    <LinearLayout android:layout_width="fill_parent"
                  android:id="@+id/singleframe"
                  android:visibility="gone"
                  android:layout_height="fill_parent"
                  android:orientation="horizontal"
                  android:layout_marginTop="20dp"
    >
        <TextView
                android:id="@+id/ok"
                android:clickable="true"
                android:layout_width="fill_parent"
                style="@style/CustomPopupButton"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/black"
                android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
