<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/background">

  <ScrollView
          android:id="@+id/scrollView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:fillViewport="true">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
      <RelativeLayout
              android:id="@+id/ly"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimary"
      >
        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/logo"
                android:layout_margin="25dp"
                android:src="@drawable/login_screen_logo"
                android:layout_centerHorizontal="true"
        />

      </RelativeLayout>
      <include layout="@layout/progress_bar_bg"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:layout_below="@+id/ly"/>
      <LinearLayout
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/progressbar"
              android:orientation="vertical">

        <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:orientation="vertical">

          <TextView
                  style="@style/CustomTextView"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/txt_email" />

          <EditText
                  android:id="@+id/login_email_id"
                  style="@style/CustomEditText"
                  android:tag="@string/txt_email"
                  android:maxLength="@integer/text_alphabet"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/email_id"
                  android:imeOptions="actionNext"
                  android:inputType="textEmailAddress" />

          <TextView
                  style="@style/CustomTextView"
                  android:layout_marginTop="10dp"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:focusableInTouchMode="true"
                  android:hint="@string/txt_pass"
          />

          <FrameLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_centerVertical="true" >
            <EditText
                    android:id="@+id/login_password"
                    style="@style/CustomEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pading"
                    android:hint="@string/hint_password"
                    android:maxLength="@integer/password_text"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            <ImageView
                    android:id="@+id/eye"
                    android:layout_marginRight="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:clickable="true"
                    android:onClick="clickEyes"
                    android:tag="hide"
                    android:background="@drawable/login_input_eyes_icon"
            />
          </FrameLayout>
          <Button
                  android:layout_width="fill_parent"
                  android:layout_marginTop="20dp"
                  android:textAllCaps="false"
                  style="@style/CustomClickableButton"
                  android:id="@+id/action_login"
                  android:onClick="login"
                  android:text="@string/registor" />

          <Button
                  android:id="@+id/forgot_password"
                  android:layout_width="fill_parent"
                  android:textAllCaps="false"
                  style="@style/CustomButton"
                  android:onClick="forgot"
                  android:visibility="gone"
                  android:clickable="true"
                  android:text="@string/forget_password" />

        </LinearLayout>

      </LinearLayout>
    </RelativeLayout>
  </ScrollView>
  <LinearLayout
          android:gravity="bottom"
          android:orientation="horizontal"
          android:weightSum="1"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

    <Button
            android:id="@+id/move_to_register"
            android:layout_width="fill_parent"
            android:clickable="true"
            android:onClick="registor"
            style="@style/CustomRButton"
    />

  </LinearLayout>
</android.support.constraint.ConstraintLayout>